# fastcpd

./: .Rbuildignore  .bazelrc  .covrignore  .gitignore  .lintr  .readthedocs.yaml  404.html  CNAME  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  WORKSPACE  _pkgdown.yml  authors.html  authors.md  configure  configure.win  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  pyproject.toml  requirements.in  requirements_lock.txt  search.json  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bazel_test_mac.yml  check-standard.yaml  python_test_windows.yml  test-coverage.yaml
R/: CP.R  CP_vanilla.R  RcppExports.R  catch-routine-registration.R  check.R  class.R  cost.R  cost_glm.R  cost_lasso.R  cost_lasso_update.R  cost_logistic_update.R  cost_poisson_update.R  cost_update.R  cost_update_gradient.R  cost_update_hessian.R  cpp_sanity.R  data_gen.R  fastcpd-class.R  fastcpd-data.R  fastcpd.R  fastcpd_builtin.R  fastcpd_class.R  fastcpd_data.R  fastcpd_sanity_impl.R  fastcpd_ts.R  fastcpd_wrappers.R  lm_variance.R  mockthat.R  neg_log_lik.R  negative_log_likelihood.R  ref_tseries_garch.R  utilities.R  variance_estimation.R
articles/: advanced-usages.html  comparison-packages.html  comparison-packages.md  comparison-pelt.html  comparison-pelt.md  examples-advanced.html  examples-advanced.md  examples-custom-model.html  examples-custom-model.md  examples-introductory.html  exploration-during-development.html  exploration-during-development.md  gallery.html  index.html  index.md  time-complexity.html  time-complexity.md
data/: bitcoin.rda  occupancy.rda  transcriptome.rda  uk_seatbelts.rda  well_log.rda
data-raw/: bitcoin.R  bitcoin.json  occupancy.R  transcriptome.R  transcriptome.RData  uk_seatbelts.R  well_log.R
inst/: CITATION
man/: CP.Rd  CP_vanilla.Rd  bitcoin.Rd  cost.Rd  cost_glm.Rd  cost_lasso.Rd  cost_lasso_update.Rd  cost_logistic_update.Rd  cost_poisson_update.Rd  cost_update.Rd  cost_update_gradient.Rd  cost_update_hessian.Rd  data_gen.Rd  fastcpd-class.Rd  fastcpd.Rd  fastcpd_ar.Rd  fastcpd_arima.Rd  fastcpd_arma.Rd  fastcpd_binomial.Rd  fastcpd_exponential.Rd  fastcpd_family.Rd  fastcpd_garch.Rd  fastcpd_kcp.Rd  fastcpd_lasso.Rd  fastcpd_lm.Rd  fastcpd_ma.Rd  fastcpd_mean.Rd  fastcpd_meanvariance.Rd  fastcpd_poisson.Rd  fastcpd_quantile.Rd  fastcpd_rank.Rd  fastcpd_ts.Rd  fastcpd_vanilla.Rd  fastcpd_var.Rd  fastcpd_variance.Rd  lm_variance.Rd  neg_log_lik.Rd  negative_log_likelihood.Rd  negative_log_likelihood_c.Rd  occupancy.Rd  (+17 more)
news/: index.html  index.md
pkgdown/: extra.scss
python/: BUILD.bazel  README.md  __init__.py  docusaurus.config.ts  fastcpd.html  fastcpd_py.cc  fastcpd_py.h  index.html  package-lock.json  pybind.cc  search.js  segmentation.py
python/docs/: intro.md
python/fastcpd/: interface.html  segmentation.html  variance_estimation.html
r/: 404.html  CNAME  LICENSE.html  pkgdown.yml  search.json
reference/: bitcoin.html  bitcoin.md  cost_update.html  cost_update_gradient.html  cost_update_hessian.html  fastcpd-class.html  fastcpd-class.md  fastcpd.arma.html  fastcpd.exponential.html  fastcpd.family.html  fastcpd.html  fastcpd.kcp.html  fastcpd.lasso.html  fastcpd.lm.html  fastcpd.md  fastcpd.quantile.html  fastcpd.rank.html  fastcpd.ts.html  fastcpd_ar.html  fastcpd_ar.md  fastcpd_arima.html  fastcpd_arima.md  fastcpd_arma.html  fastcpd_arma.md  fastcpd_binomial.html  fastcpd_binomial.md  fastcpd_exponential.html  fastcpd_exponential.md  fastcpd_family.html  fastcpd_family.md  fastcpd_garch.html  fastcpd_garch.md  fastcpd_kcp.html  fastcpd_kcp.md  fastcpd_lasso.html  fastcpd_lasso.md  fastcpd_lm.html  fastcpd_lm.md  fastcpd_ma.html  fastcpd_mean.html  (+58 more)
shiny/: app.R  lm.csv  server.R  ui.R
src/: .gitignore  BUILD.bazel  Makevars  Makevars.win  RcppExports.cpp  constants.h  cost_update.cc  cost_update.cpp  cost_update.h  cost_update_builtin.cpp  cost_update_c.cpp  cost_update_gradient.cc  cost_update_gradient.cpp  cost_update_hessian.cc  cost_update_hessian.cpp  data_gen.cpp  fastcpd.cc  fastcpd.h  fastcpd_class.cc  fastcpd_class.h  fastcpd_class_cost.cc  fastcpd_class_nll.cc  fastcpd_class_private.cc  fastcpd_class_public.cc  fastcpd_class_test.cc  fastcpd_classes.cc  fastcpd_classes.h  fastcpd_constants.h  fastcpd_cost_wrappers.cc  fastcpd_family.h  fastcpd_functions.cc  fastcpd_functions.h  fastcpd_garch.h  fastcpd_glm.h  fastcpd_impl.cc  fastcpd_impl.h  fastcpd_optim.h  fastcpd_progress.h  fastcpd_template.h  fastcpd_test.cc  (+34 more)
src/codegen/: pelt.tmpl  segd.tmpl
src/families/: arma.h  binomial.h  custom.h  exponential.h  garch.h  gaussian.h  lasso.h  ma.h  mean.h  meanvariance.h  mgaussian.h  poisson.h  quantile.h  variance.h
tests/: test_fastcpd.py  testthat.R
tools/: codegen.R
vignettes/: advanced-usages.Rmd  comparison-packages.Rmd  comparison-packages.Rmd.original  comparison-pelt.Rmd  comparison-pelt.Rmd.original  examples-advanced.Rmd  examples-advanced.Rmd.original  examples-custom-model.Rmd  examples-custom-model.Rmd.original  examples-introductory.Rmd  exploration-during-development.Rmd  exploration-during-development.Rmd.original  fastcpd.Rmd  gallery.Rmd  my-vignette.Rmd  time-complexity.Rmd  time-complexity.Rmd.original
(+196 files in other folders)
