[project]
name = "fastcpd"
description="A Python package for performing fast change point detection."
dynamic = ["version"]
authors = [
    {name="Xingchi Li", email="anthony.li.stat.tamu.edu@lixingchi.com"},
    {name="Xianyang Zhang", email="zhangxiany@stat.tamu.edu"},
]
requires-python = ">=3.10"
readme = "README.md"

maintainers = [
    {name="Xingchi Li", email="anthony.li.stat.tamu.edu@lixingchi.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: R",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
]

license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]


[tool.setuptools.dynamic]
version = {attr = "fastcpd.__version__"}


[build-system]
requires = [
    "numpy>=2.0.3",
    "build",
    "pytest",
    "setuptools",
]

[project.urls]
Documentation = "https://fastcpd.xingchi.li/"
Repository = "https://github.com/doccstat/fastcpd"
