load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "fastcpd_init",
    srcs = [
        "__init__.py",
        "segmentation.py",
        "variance_estimation.py",
    ],
    deps = [
        ":py_fastcpd",
        "@pypi//numpy:pkg",
    ],
)

py_library(
    name = "fastcpd_py_library",
    deps = [
        ":fastcpd_init",
        ":py_fastcpd",
    ],
)

py_package(
    name = "fastcpd_py_package",
    deps = [
        ":fastcpd_py_library",
    ],
)

py_wheel(
    name = "pyfastcpd",
    distribution = "fastcpd",
    python_tag = "py3",
    stamp = 0,
    version = "0.19.0",
    deps = [
        ":fastcpd_py_package",
    ],
)

cc_binary(
    name = "interface",
    srcs = [
        "fastcpd_py.cc",
        "fastcpd_py.h",
        "pybind.cc",
    ],
    copts = ["-std=c++17"],
    includes = [
        ".",
    ],
    linkopts = select({
        "@platforms//os:osx": ["-undefined dynamic_lookup"],
        "@platforms//os:linux": ["-lopenblas"],
        "@platforms//os:windows": [],
    }),
    linkshared = True,
    linkstatic = select({
        "@platforms//os:osx": False,
        "@platforms//os:linux": True,
        "@platforms//os:windows": True,
    }),
    deps = [
        "//src:class",
        "@com_github_pybind_pybind11//:pybind11",
        "@local_config_python//:python_headers",
    ],
)

# This wrapper exists to expose the .so binary to python
py_library(
    name = "py_fastcpd",
    data = [
        ":interface",
    ],
    imports = ["."],
)
