cc_library(
    name = "class",
    hdrs = [
        "fastcpd_family.h",
        "fastcpd_template.h",
        "families/lasso.h",
        "families/mean.h",
        "families/meanvariance.h",
        "families/mgaussian.h",
        "families/variance.h",
    ],
    copts = [
        "-std=c++17",
    ],
    strip_include_prefix = ".",
    visibility = [
        "//fastcpd/python/cpp:__pkg__",
        "//python:__pkg__",
    ],
    deps = [
        "@armadillo_headers//:armadillo_header",
    ],
)
