cc_library(
    name = "class",
    hdrs = [
        "fastcpd_family.h",
        "fastcpd_optim.h",
        "fastcpd_template.h",
        "families/exponential.h",
        "families/lasso.h",
        "families/mean.h",
        "families/meanvariance.h",
        "families/mgaussian.h",
        "families/variance.h",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++17"],
        "//conditions:default": ["-std=c++17"],
    }),
    strip_include_prefix = ".",
    visibility = [
        "//fastcpd/python/cpp:__pkg__",
        "//python:__pkg__",
    ],
    deps = [
        "@armadillo_headers//:armadillo_header",
    ],
)
