cc_library(
    name = "class",
    hdrs = [
        "fastcpd_family.h",
        "fastcpd_garch.h",
        "fastcpd_glm.h",
        "fastcpd_optim.h",
        "fastcpd_template.h",
        "families/arma.h",
        "families/binomial.h",
        "families/exponential.h",
        "families/garch.h",
        "families/gaussian.h",
        "families/lasso.h",
        "families/ma.h",
        "families/mean.h",
        "families/meanvariance.h",
        "families/mgaussian.h",
        "families/poisson.h",
        "families/variance.h",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++17", "/D_USE_MATH_DEFINES"],
        "//conditions:default": ["-std=c++17"],
    }),
    strip_include_prefix = ".",
    visibility = [
        "//fastcpd/python/cpp:__pkg__",
        "//python:__pkg__",
    ],
    deps = [
        "@abseil-cpp//absl/base:prefetch",
        "@abseil-cpp//absl/container:inlined_vector",
        "@armadillo_headers//:armadillo_header",
    ],
)
